[gd_scene load_steps=11 format=3 uid="uid://3g86xogvwrgv"]

[ext_resource type="Script" path="res://Scenes/SystemsAndManagers/player_character.gd" id="1_04qb1"]
[ext_resource type="Script" path="res://Scenes/SystemsAndManagers/camera_controller.gd" id="2_aw5yu"]
[ext_resource type="Script" path="res://Scenes/SystemsAndManagers/tool_camera.gd" id="3_76q7t"]
[ext_resource type="Shader" uid="uid://bmowejp10voff" path="res://Resources/Shaders/pixel_shader.tres" id="4_enxm7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l2amc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qv7jw"]
shader = ExtResource("4_enxm7")

[sub_resource type="BoxMesh" id="BoxMesh_a0a2d"]

[sub_resource type="ViewportTexture" id="ViewportTexture_66bi1"]
viewport_path = NodePath("CameraController/CharacterCamera/ToolViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kojja"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_66bi1")

[sub_resource type="QuadMesh" id="QuadMesh_i6gmh"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_kojja")

[node name="PlayerCharacter" type="CharacterBody3D"]
script = ExtResource("1_04qb1")

[node name="CharacterCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_l2amc")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
script = ExtResource("2_aw5yu")

[node name="CharacterCamera" type="Camera3D" parent="CameraController"]

[node name="ToolViewport" type="SubViewport" parent="CameraController/CharacterCamera"]
canvas_cull_mask = 4294966273

[node name="ToolCamera" type="Camera3D" parent="CameraController/CharacterCamera/ToolViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.648895, 0)
cull_mask = 1047553
script = ExtResource("3_76q7t")

[node name="TorchTest" type="OmniLight3D" parent="CameraController/CharacterCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.391102, 0)
light_energy = 0.2

[node name="ToolController" type="Node3D" parent="CameraController/CharacterCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.212871)

[node name="ToolUI" type="Control" parent="CameraController/CharacterCamera/ToolController"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighlightMode" type="Control" parent="CameraController/CharacterCamera/ToolController/ToolUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputMode" type="Control" parent="CameraController/CharacterCamera/ToolController/ToolUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BasicToolFilter" type="ColorRect" parent="CameraController/CharacterCamera/ToolController/ToolUI"]
material = SubResource("ShaderMaterial_qv7jw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tool" type="Node3D" parent="CameraController/CharacterCamera/ToolController"]

[node name="ToolModel" type="Node3D" parent="CameraController/CharacterCamera/ToolController/Tool"]

[node name="UpFrame" type="MeshInstance3D" parent="CameraController/CharacterCamera/ToolController/Tool/ToolModel"]
transform = Transform3D(0.5, 0, 0, 0, 0.05, 0, 0, 0, 0.01, 0, 0.15, 0)
mesh = SubResource("BoxMesh_a0a2d")
skeleton = NodePath("../..")

[node name="DownFrame" type="MeshInstance3D" parent="CameraController/CharacterCamera/ToolController/Tool/ToolModel"]
transform = Transform3D(0.5, 0, 0, 0, 0.05, 0, 0, 0, 0.01, 0, -0.15, 0)
mesh = SubResource("BoxMesh_a0a2d")
skeleton = NodePath("../..")

[node name="LeftFrame" type="MeshInstance3D" parent="CameraController/CharacterCamera/ToolController/Tool/ToolModel"]
transform = Transform3D(0.05, 0, 0, 0, 0.35, 0, 0, 0, 0.01, -0.275, 0, 0)
mesh = SubResource("BoxMesh_a0a2d")
skeleton = NodePath("../..")

[node name="RightFrame" type="MeshInstance3D" parent="CameraController/CharacterCamera/ToolController/Tool/ToolModel"]
transform = Transform3D(0.05, 0, 0, 0, 0.35, 0, 0, 0, 0.01, 0.275, 0, 0)
mesh = SubResource("BoxMesh_a0a2d")
skeleton = NodePath("../..")

[node name="ToolScreen" type="MeshInstance3D" parent="CameraController/CharacterCamera/ToolController/Tool/ToolModel"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0.00118034)
mesh = SubResource("QuadMesh_i6gmh")
skeleton = NodePath("../../../ToolUI")
